--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,8 +1,7 @@
 //Import fonts
-//@font-face {
-//    font-family: FontNameExample;
-//    src: url(../fonts/FontUrlExample.ttf);
-//}
+/*
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+*/
 
 
 // Import UIkit with only core styles)
