--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -35,9 +35,9 @@
 @global-font-size:                              16px;
 @global-line-height:                            1.5;      // 24px
 
-@global-xxlarge-font-size:                      2.625rem; // 42px
-@global-xlarge-font-size:                       28px;     // 32px
-@global-large-font-size:                        18px;   // 24px
+@global-xxlarge-font-size:                      57px; // 42px
+@global-xlarge-font-size:                       30px;     // 32px
+@global-large-font-size:                        20px;   // 24px
 @global-medium-font-size:                       17px;  // 20px
 @global-small-font-size:                        12px; // 14px
 
