--- a/src/styles/theme/inverse.less
+++ b/src/styles/theme/inverse.less
@@ -7,6 +7,18 @@
 // Variables
 // ========================================================================
 
+@inverse-global-color-mode:                     light;
+
+@inverse-global-color:                          @global-inverse-color;
+@inverse-global-emphasis-color:                 @global-inverse-color;
+@inverse-global-muted-color:                    fade(@global-inverse-color, 70%);
+@inverse-global-inverse-color:                  @global-color;
+
+@inverse-global-primary-background:             @global-inverse-color;
+@inverse-global-muted-background:               fade(@global-inverse-color, 10%);
+
+@inverse-global-border:                         fade(@global-inverse-color, 20%);
+
 
 // Component
 // ========================================================================
