add uk-text-light, html navbar

--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -39,7 +39,6 @@
 
 .hook-text-large() {}
 
-
 // Background modifier
 // ========================================================================
 
@@ -57,3 +56,12 @@
 
 .hook-inverse-text-lead() {}
 .hook-inverse-text-meta() {}
+
+//New
+
+/* Weight modifier
+ ========================================================================== */
+
+.uk-text-light {
+    font-weight: 300;
+}
