importing variables to custom theme

--- a/src/styles/theme/accordion.less
+++ b/src/styles/theme/accordion.less
@@ -7,6 +7,15 @@
 // Variables
 // ========================================================================
 
+@accordion-item-margin-top:                    @global-margin;
+
+@accordion-title-font-size:                    @global-medium-font-size;
+@accordion-title-line-height:                  1.4;
+@accordion-title-color:                        @global-emphasis-color;
+@accordion-title-hover-color:                  @global-color;
+
+@accordion-content-margin-top:                 @global-margin;
+
 //
 // New
 //
