--- a/src/styles/theme/leader.less
+++ b/src/styles/theme/leader.less
@@ -7,6 +7,8 @@
 // Variables
 // ========================================================================
 
+@leader-fill-content:                           ~'.';
+@leader-fill-margin-left:                       @global-small-gutter;
 
 // Component
 // ========================================================================
