--- a/src/styles/theme/button.less
+++ b/src/styles/theme/button.less
@@ -12,16 +12,54 @@
 @button-large-line-height:                      @global-control-large-height - (@button-border-width * 2);
 
 @button-font-size:                              @global-small-font-size;
+@button-small-font-size:                        @global-small-font-size;
 @button-large-font-size:                        @global-small-font-size;
+
+@button-padding-horizontal:                     @global-gutter;
+@button-small-padding-horizontal:               @global-small-gutter;
+@button-large-padding-horizontal:               @global-medium-gutter;
 
 @button-default-background:                     transparent;
 @button-default-hover-background:               transparent;
 @button-default-active-background:              transparent;
+@button-default-color:                          @global-emphasis-color;
+@button-default-hover-color:                    @global-emphasis-color;
+@button-default-active-color:                   @global-emphasis-color;
+
+@button-primary-background:                     @global-primary-background;
+@button-primary-color:                          @global-inverse-color;
+@button-primary-hover-background:               darken(@button-primary-background, 5%);
+@button-primary-hover-color:                    @global-inverse-color;
+@button-primary-active-background:              darken(@button-primary-background, 10%);
+@button-primary-active-color:                   @global-inverse-color;
+
+@button-secondary-background:                   @global-secondary-background;
+@button-secondary-color:                        @global-inverse-color;
+@button-secondary-hover-background:             darken(@button-secondary-background, 5%);
+@button-secondary-hover-color:                  @global-inverse-color;
+@button-secondary-active-background:            darken(@button-secondary-background, 10%);
+@button-secondary-active-color:                 @global-inverse-color;
+
+@button-danger-background:                      @global-danger-background;
+@button-danger-color:                           @global-inverse-color;
+@button-danger-hover-background:                darken(@button-danger-background, 5%);
+@button-danger-hover-color:                     @global-inverse-color;
+@button-danger-active-background:               darken(@button-danger-background, 10%);
+@button-danger-active-color:                    @global-inverse-color;
 
 @button-disabled-background:                    transparent;
+@button-disabled-color:                         @global-muted-color;
 
+@button-text-line-height:                       @global-line-height;
 @button-text-color:                             @global-emphasis-color;
 @button-text-hover-color:                       @global-emphasis-color;
+@button-text-disabled-color:                    @global-muted-color;
+
+@button-link-line-height:                       @global-line-height;
+@button-link-color:                             @global-link-color;
+@button-link-hover-color:                       @global-link-hover-color;
+@button-link-hover-text-decoration:             underline;
+@button-link-disabled-color:                    @global-muted-color;
 
 //
 // New
