--- a/src/styles/theme/description-list.less
+++ b/src/styles/theme/description-list.less
@@ -6,7 +6,17 @@
 
 // Variables
 // ========================================================================
+@description-list-term-color:                   @global-emphasis-color;
+@description-list-term-margin-top:              @global-margin;
 
+@description-list-divider-term-margin-top:      @global-margin;
+@description-list-divider-term-border-width:    @global-border-width;
+@description-list-divider-term-border:          @global-border;
+
+//
+// New
+//
+// not sure is it new or not
 @description-list-term-font-size:                      @global-small-font-size;
 @description-list-term-font-weight:                    normal;
 @description-list-term-text-transform:                 uppercase;
