--- a/src/styles/theme/drop.less
+++ b/src/styles/theme/drop.less
@@ -7,6 +7,9 @@
 // Variables
 // ========================================================================
 
+@drop-z-index:                              @global-z-index + 20;
+@drop-width:                                300px;
+@drop-margin:                               @global-margin;
 
 // Miscellaneous
 // ========================================================================
