--- a/src/styles/theme/height.less
+++ b/src/styles/theme/height.less
@@ -7,6 +7,9 @@
 // Variables
 // ========================================================================
 
+@height-small-height:                           150px;
+@height-medium-height:                          300px;
+@height-large-height:                           450px;
 
 // Miscellaneous
 // ========================================================================
