--- a/src/styles/theme/marker.less
+++ b/src/styles/theme/marker.less
@@ -7,6 +7,11 @@
 // Variables
 // ========================================================================
 
+@marker-padding:                                 5px;
+@marker-background:                              @global-secondary-background;
+@marker-color:                                   @global-inverse-color;
+
+@marker-hover-color:                             @global-inverse-color;
 
 // Component
 // ========================================================================
