--- a/src/styles/theme/placeholder.less
+++ b/src/styles/theme/placeholder.less
@@ -7,6 +7,9 @@
 // Variables
 // ========================================================================
 
+@placeholder-margin-vertical:                   @global-margin;
+@placeholder-padding-vertical:                  @global-gutter;
+@placeholder-padding-horizontal:                @global-gutter;
 @placeholder-background:                        transparent;
 
 //
