--- a/src/styles/theme/position.less
+++ b/src/styles/theme/position.less
@@ -7,6 +7,10 @@
 // Variables
 // ========================================================================
 
+@position-small-margin:                                @global-small-gutter;
+@position-medium-margin:                               @global-gutter;
+@position-large-margin:                                @global-gutter;
+@position-large-margin-l:                              50px;
 
 // Miscellaneous
 // ========================================================================
