--- a/src/styles/theme/progress.less
+++ b/src/styles/theme/progress.less
@@ -7,8 +7,17 @@
 // Variables
 // ========================================================================
 
-@progress-border-radius:                        500px;
+@progress-height:                               15px;
+@progress-margin-vertical:                      @global-margin;
+@progress-background:                           @global-muted-background;
 
+@progress-bar-background:                       @global-primary-background;
+
+//
+//New
+//
+
+@progress-border-radius:                        500px;
 
 // Component
 // ========================================================================
