--- a/src/styles/theme/sortable.less
+++ b/src/styles/theme/sortable.less
@@ -7,6 +7,11 @@
 // Variables
 // ========================================================================
 
+@sortable-dragged-z-index:                      @global-z-index + 50;
+
+@sortable-placeholder-opacity:                  0;
+
+@sortable-empty-height:                         50px;
 
 // Component
 // ========================================================================
