--- a/src/styles/theme/sticky.less
+++ b/src/styles/theme/sticky.less
@@ -7,6 +7,10 @@
 // Variables
 // ========================================================================
 
+@sticky-z-index:                                @global-z-index - 20;
+
+@sticky-animation-duration:                     0.2s;
+@sticky-reverse-animation-duration:             0.2s;
 
 // Miscellaneous
 // ========================================================================
