--- a/src/styles/theme/thumbnav.less
+++ b/src/styles/theme/thumbnav.less
@@ -7,6 +7,9 @@
 // Variables
 // ========================================================================
 
+@thumbnav-margin-horizontal:                    15px;
+@thumbnav-margin-vertical:                      @thumbnav-margin-horizontal;
+
 //
 // New
 //
