--- a/src/styles/theme/totop.less
+++ b/src/styles/theme/totop.less
@@ -7,6 +7,12 @@
 // Variables
 // ========================================================================
 
+@totop-padding:                                 5px;
+@totop-color:                                   @global-muted-color;
+
+@totop-hover-color:                             @global-color;
+
+@totop-active-color:                            @global-emphasis-color;
 
 // Component
 // ========================================================================
