--- a/src/styles/theme/grid.less
+++ b/src/styles/theme/grid.less
@@ -7,6 +7,7 @@
 // Variables
 // ========================================================================
 
+@grid-gutter-horizontal-l:                      @global-gutter;
 
 // Miscellaneous
 // ========================================================================
