--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -7,8 +7,8 @@
 // Variables
 // ========================================================================
 
-@text-lead-font-size:                           @global-large-font-size;
-@text-lead-line-height:                         1.5;
+@text-lead-font-size:                           @global-xlarge-font-size;
+@text-lead-line-height:                         1.1;
 @text-lead-color:                               @global-emphasis-color;
 
 @text-meta-font-size:                           @global-small-font-size;
