form search companions add

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -1,3 +1,11 @@
 a.uk-light:hover {
   color: @global-inverse-color;
 }
+
+.uk-select:not([multiple]):not([size]) {
+  background-image: none;
+}
+
+.tm-news-small h3 {
+  line-height: 30px;
+}
