--- a/src/styles/theme/padding.less
+++ b/src/styles/theme/padding.less
@@ -8,7 +8,7 @@
 // ========================================================================
 
 @padding-padding:                                       @global-gutter;
-@padding-padding-l:                                     @global-medium-gutter;
+@padding-padding-l:                                     @global-gutter;
 
 @padding-small-padding:                                 @global-small-gutter;
 
