--- a/src/styles/theme/padding.less
+++ b/src/styles/theme/padding.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@padding-padding:                                       @global-gutter;
+@padding-padding:                                       @global-small-gutter;
 @padding-padding-l:                                     @global-gutter;
 
 @padding-small-padding:                                 @global-small-gutter;
