--- a/src/styles/theme/base.less
+++ b/src/styles/theme/base.less
@@ -45,7 +45,7 @@
 @base-h2-font-size:                             @base-h2-font-size-m * 0.85;
 @base-h2-line-height:                           1;
 @base-h3-font-size:                             @global-large-font-size;
-@base-h3-line-height:                           1.3;
+@base-h3-line-height:                           30px;
 @base-h4-font-size:                             @global-medium-font-size;
 @base-h4-line-height:                           1.4;
 @base-h5-font-size:                             @global-font-size;
@@ -132,7 +132,9 @@
     font-weight: 900;
 }
 
-.hook-base-h3() {}
+.hook-base-h3() {
+    font-weight: 300;
+}
 
 .hook-base-h4() {}
 
