--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -37,7 +37,7 @@
 
 @global-xxlarge-font-size:                      57px; // 42px
 @global-xlarge-font-size:                       30px;     // 32px
-@global-large-font-size:                        20px;   // 24px
+@global-large-font-size:                        24px;   // 24px
 @global-medium-font-size:                       18px;  // 20px
 @global-small-font-size:                        12px; // 14px
 
@@ -62,7 +62,8 @@
 
 @global-muted-background:                       #f8f8f8;
 @global-primary-background:                     #48729e;
-@global-secondary-background:                   #ff983a;
+@global-secondary-background:                   #ececec;
+/*@global-secondary-background:                   #ff983a*/;
 
 @global-success-background:                     #32d296;
 @global-warning-background:                     #faa05a;
