--- a/src/styles/theme/nav.less
+++ b/src/styles/theme/nav.less
@@ -28,8 +28,8 @@
 @nav-divider-margin-vertical:                   5px;
 @nav-divider-margin-horizontal:                 0;
 
-@nav-default-item-color:                        @global-muted-color;
-@nav-default-item-hover-color:                  @global-color;
+@nav-default-item-color:                        @global-color;
+@nav-default-item-hover-color:                  @global-muted-color;
 @nav-default-item-active-color:                 @global-emphasis-color;
 @nav-default-header-color:                      @global-emphasis-color;
 @nav-default-divider-border-width:              @global-border-width;
@@ -55,7 +55,7 @@
 // New
 //
 
-@nav-default-font-size:                         @global-small-font-size;
+@nav-default-font-size:                         14px;
 
 
 // Sublists
