--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -63,6 +63,10 @@
 
 .hook-text-large() {}
 
+.uk-text-medium {
+    font-size: @global-medium-font-size;
+}
+
 // Background modifier
 // ========================================================================
 
