--- a/src/styles/theme/drop.less
+++ b/src/styles/theme/drop.less
@@ -9,7 +9,7 @@
 
 @drop-z-index:                              @global-z-index + 20;
 @drop-width:                                300px;
-@drop-margin:                               @global-margin;
+@drop-margin:                               0;
 
 // Miscellaneous
 // ========================================================================
