--- a/src/styles/theme/navbar.less
+++ b/src/styles/theme/navbar.less
@@ -27,10 +27,10 @@
 @navbar-subtitle-font-size:                     @global-small-font-size;
 
 @navbar-dropdown-z-index:                       @global-z-index + 20;
-@navbar-dropdown-width:                         200px;
+@navbar-dropdown-width:                         100%;
 @navbar-dropdown-margin:                        15px;
 @navbar-dropdown-padding:                       25px;
-@navbar-dropdown-background:                    @global-background;
+@navbar-dropdown-background:                    #2e547b;
 @navbar-dropdown-color:                         @global-color;
 @navbar-dropdown-grid-gutter-horizontal:        (@navbar-dropdown-padding * 2);
 @navbar-dropdown-grid-gutter-vertical:          @navbar-dropdown-grid-gutter-horizontal;
