--- a/src/styles/theme/navbar.less
+++ b/src/styles/theme/navbar.less
@@ -29,7 +29,7 @@
 @navbar-dropdown-z-index:                       @global-z-index + 20;
 @navbar-dropdown-width:                         100%;
 @navbar-dropdown-margin:                        15px;
-@navbar-dropdown-padding:                       25px;
+@navbar-dropdown-padding:                       0;
 @navbar-dropdown-background:                    #2e547b;
 @navbar-dropdown-color:                         @global-color;
 @navbar-dropdown-grid-gutter-horizontal:        (@navbar-dropdown-padding * 2);
@@ -38,14 +38,14 @@
 @navbar-dropdown-dropbar-margin-top:            0;
 @navbar-dropdown-dropbar-margin-bottom:         @navbar-dropdown-dropbar-margin-top;
 
-@navbar-dropdown-nav-item-color:                @global-muted-color;
-@navbar-dropdown-nav-item-hover-color:          @global-color;
-@navbar-dropdown-nav-item-active-color:         @global-emphasis-color;
-@navbar-dropdown-nav-header-color:              @global-emphasis-color;
+@navbar-dropdown-nav-item-color:                #fff;
+@navbar-dropdown-nav-item-hover-color:          #fff;
+@navbar-dropdown-nav-item-active-color:         #fff;
+@navbar-dropdown-nav-header-color:              #fff;
 @navbar-dropdown-nav-divider-border-width:      @global-border-width;
 @navbar-dropdown-nav-divider-border:            @global-border;
-@navbar-dropdown-nav-sublist-item-color:        @global-muted-color;
-@navbar-dropdown-nav-sublist-item-hover-color:  @global-color;
+@navbar-dropdown-nav-sublist-item-color:        #fff;
+@navbar-dropdown-nav-sublist-item-hover-color:  #fff;
 
 @navbar-dropbar-background:                     @navbar-dropdown-background;
 @navbar-dropbar-z-index:                        @global-z-index - 20;
