--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -6,6 +6,10 @@ a.uk-light:hover {
   background-image: none;
 }
 
+footer {
+  background-color: #dadada;
+}
+
 .tm-companion-item {
   width: 102px;
 
@@ -63,10 +67,15 @@ a.uk-light:hover {
   line-height: 2;
 }
 
-footer {
-  background-color: #dadada;
-}
-
 .tm-slider-content {
   padding: 0 70px;
+}
+
+.tm-pageheader {
+  min-height: 500px;
+}
+
+.tm-pageheader-main {
+  background: url("../../images/bg_pageheader_main.jpg") no-repeat center;
+  background-size: cover;
 }
