--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -73,6 +73,10 @@ footer {
 
 .tm-pageheader {
   min-height: 500px;
+
+  .uk-navbar-container {
+    background: transparent;
+  }
 }
 
 .tm-pageheader-main {
