--- a/src/styles/theme/navbar.less
+++ b/src/styles/theme/navbar.less
@@ -7,11 +7,11 @@
 // Variables
 // ========================================================================
 
-@navbar-background:                             @global-muted-background;
+@navbar-background:                             @global-primary-background;
 @navbar-color-mode:                             none;
 
 @navbar-nav-item-height:                        65px;
-@navbar-nav-item-padding-horizontal:            15px;
+@navbar-nav-item-padding-horizontal:            10px;
 @navbar-nav-item-color:                         @global-muted-color;
 @navbar-nav-item-font-size:                     @global-font-size;
 @navbar-nav-item-font-family:                   @global-font-family;
@@ -54,7 +54,7 @@
 // New
 //
 
-@navbar-nav-item-text-transform:                uppercase;
+@navbar-nav-item-text-transform:                none;
 
 @navbar-dropdown-nav-font-size:                 @global-small-font-size;
 
