--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -49,6 +49,8 @@
 @global-emphasis-color:                         #000;
 @global-muted-color:                            #999;
 
+@global-orange:                                 #ff983a;
+
 @global-link-color:                             #396fa4;
 @global-link-hover-color:                       #376396;
 
