--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -67,6 +67,11 @@
     font-size: @global-medium-font-size;
 }
 
+.uk-text-little {
+    font-size: 14px;
+    line-height: 2;
+}
+
 // Background modifier
 // ========================================================================
 
