--- a/src/styles/theme/section.less
+++ b/src/styles/theme/section.less
@@ -12,7 +12,7 @@
 
 @section-xsmall-padding-vertical:                 @global-margin;
 
-@section-small-padding-vertical:                  @global-medium-margin;
+@section-small-padding-vertical:                  @global-small-margin;
 
 @section-large-padding-vertical:                  @global-large-margin;
 @section-large-padding-vertical-m:                @global-xlarge-margin;
