--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -52,7 +52,7 @@
 @global-orange:                                 #ff983a;
 
 @global-link-color:                             #396fa4;
-@global-link-hover-color:                       #376396;
+@global-link-hover-color:                       #2e547b;
 
 @global-inverse-color:                          #fff;
 
