--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -21,7 +21,7 @@
 @text-large-font-size:                          @global-large-font-size;
 @text-large-line-height:                        1.5;
 
-@text-bold-font-weight:                         bolder;
+@text-bold-font-weight:                         700;
 
 @text-muted-color:                              @global-muted-color;
 @text-primary-color:                            @global-primary-background;
