--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -6,6 +6,12 @@ a.uk-light:hover {
   background-image: none;
 }
 
+header {
+  .uk-button-small {
+    font-size: @global-font-size;
+  }
+}
+
 footer {
   background-color: #dadada;
 }
@@ -78,3 +84,19 @@ footer {
   background: url("../../images/bg_pageheader_main.jpg") no-repeat center;
   background-size: cover;
 }
+
+
+// social buttons
+.tm-social {
+  i {
+    width: 34px;
+    height: 34px;
+    font-size: 19px;
+    line-height: 34px;
+    text-align: center;
+    border: 1px solid;
+    border-radius: 50%;
+    box-sizing: border-box;
+  }
+}
+
