--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -50,6 +50,7 @@
 @global-muted-color:                            #999;
 
 @global-orange:                                 #ff983a;
+@global-blue:                                   #1884bc;
 
 @global-link-color:                             #396fa4;
 @global-link-hover-color:                       #2e547b;
