nav styling part

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -85,7 +85,6 @@ footer {
   background-size: cover;
 }
 
-
 // social buttons
 .tm-social {
   i {
@@ -100,3 +99,21 @@ footer {
   }
 }
 
+//navbar
+.tm-navbar-active {
+  background-color: #48729e;
+}
+
+.tm-navbar-item-active {
+  background-color: @navbar-dropdown-background;
+}
+
+.tm-navbar-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
