--- a/src/styles/theme/navbar.less
+++ b/src/styles/theme/navbar.less
@@ -86,6 +86,7 @@
 }
 
 .hook-navbar-nav-item-hover() {
+  background-color: @navbar-dropdown-background;
 }
 
 .hook-navbar-nav-item-onclick() {
@@ -241,3 +242,4 @@
 
 .hook-inverse-navbar-toggle-hover() {
 }
+
