--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -85,9 +85,9 @@ footer {
   background-size: cover;
 }
 
-
 // social buttons
 .tm-social {
+
   i {
     width: 34px;
     height: 34px;
@@ -99,4 +99,26 @@ footer {
     box-sizing: border-box;
   }
 }
+
+.tm-image-shadow {
+  box-shadow: inset 0 -100px 80px -40px #fff;
+
+  img {
+    position: relative;
+    z-index: -1;
+  }
+}
+
+.tm-article-footer {
+  font-size: 14px;
+  border-top: 2px solid @global-blue;
+
+  .tm-button-more {
+    position: relative;
+    top: -20px;
+  }
+}
+
+
+
 
