--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -7,6 +7,12 @@ a.uk-light:hover {
 }
 
 header {
+
+  .uk-navbar {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
   .uk-button-small {
     font-size: @global-font-size;
   }
@@ -17,7 +23,6 @@ footer {
 }
 
 .tm-companion-item {
-  width: 102px;
 
   h4 {
     font-family: 'Roboto Condensed', sans-serif;
