--- a/src/styles/theme/slidenav.less
+++ b/src/styles/theme/slidenav.less
@@ -3,59 +3,67 @@
 //
 // ========================================================================
 
-
 // Variables
 // ========================================================================
 
-@slidenav-padding-vertical:                     5px;
-@slidenav-padding-horizontal:                   10px;
+@slidenav-padding-vertical: 5px;
+@slidenav-padding-horizontal: 10px;
 
-@slidenav-color:                                fade(@global-color, 50%);
-@slidenav-hover-color:                          fade(@global-color, 90%);
-@slidenav-active-color:                         fade(@global-color, 50%);
+@slidenav-color: fade(@global-color, 50%);
+@slidenav-hover-color: fade(@global-color, 90%);
+@slidenav-active-color: fade(@global-color, 50%);
 
-@slidenav-large-padding-vertical:               10px;
-@slidenav-large-padding-horizontal:             @slidenav-large-padding-vertical;
+@slidenav-large-padding-vertical: 10px;
+@slidenav-large-padding-horizontal: @slidenav-large-padding-vertical;
 
 // Component
 // ========================================================================
 
-.hook-slidenav() { transition: color 0.1s ease-in-out; }
+.hook-slidenav() {
+  transition: color 0.1s ease-in-out;
+}
 
-.hook-slidenav-hover() {}
+.hook-slidenav-hover() {
+}
 
-.hook-slidenav-active() {}
-
+.hook-slidenav-active() {
+}
 
 // Icon modifier
 // ========================================================================
 
-.hook-slidenav-previous() {}
+.hook-slidenav-previous() {
+}
 
-.hook-slidenav-next() {}
-
+.hook-slidenav-next() {
+}
 
 // Size modifier
 // ========================================================================
 
-.hook-slidenav-large() {}
-
+.hook-slidenav-large() {
+}
 
 // Container
 // ========================================================================
 
-.hook-slidenav-container() {}
-
+.hook-slidenav-container() {
+}
 
 // Miscellaneous
 // ========================================================================
 
-.hook-icon-misc() {}
-
+.hook-icon-misc() {
+}
 
 // Inverse
 // ========================================================================
 
-.hook-inverse-slidenav() {}
-.hook-inverse-slidenav-hover() {}
-.hook-inverse-slidenav-active() {}
+.hook-inverse-slidenav() {
+}
+
+.hook-inverse-slidenav-hover() {
+}
+
+.hook-inverse-slidenav-active() {
+}
