--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -3,92 +3,97 @@
 //
 // ========================================================================
 
-
 // Variables
 // ========================================================================
 
-@text-lead-font-size:                           @global-xlarge-font-size;
-@text-lead-line-height:                         1.1;
-@text-lead-color:                               @global-emphasis-color;
+@text-lead-font-size: @global-xlarge-font-size;
+@text-lead-line-height: 1.1;
+@text-lead-color: @global-emphasis-color;
 
-@text-meta-font-size:                           @global-small-font-size;
-@text-meta-line-height:                         1.4;
-@text-meta-color:                               @global-muted-color;
+@text-meta-font-size: @global-small-font-size;
+@text-meta-line-height: 1.4;
+@text-meta-color: @global-muted-color;
 
-@text-small-font-size:                          @global-small-font-size;
-@text-small-line-height:                        1.5;
+@text-small-font-size: @global-small-font-size;
+@text-small-line-height: 1.5;
 
-@text-large-font-size:                          @global-large-font-size;
-@text-large-line-height:                        1.5;
+@text-large-font-size: @global-large-font-size;
+@text-large-line-height: 1.5;
 
-@text-bold-font-weight:                         700;
+@text-bold-font-weight: 700;
 
-@text-muted-color:                              @global-muted-color;
-@text-primary-color:                            @global-primary-background;
-@text-success-color:                            @global-success-background;
-@text-warning-color:                            @global-warning-background;
-@text-danger-color:                             @global-danger-background;
+@text-muted-color: @global-muted-color;
+@text-primary-color: @global-primary-background;
+@text-success-color: @global-success-background;
+@text-warning-color: @global-warning-background;
+@text-danger-color: @global-danger-background;
 
-@text-background-color:                         @global-primary-background;
+@text-background-color: @global-primary-background;
 
 //
 // New
 //
 
-@text-meta-link-color:                          @text-meta-color;
-@text-meta-link-hover-color:                    @global-color;
-
+@text-meta-link-color: @text-meta-color;
+@text-meta-link-hover-color: @global-color;
 
 // Style modifiers
 // ========================================================================
 
-.hook-text-lead() {}
+.hook-text-lead() {
+}
 
 .hook-text-meta() {
 
-    a { color: @text-meta-link-color; }
+  a {
+    color: @text-meta-link-color;
+  }
 
-    a:hover {
-        color: @text-meta-link-hover-color;
-        text-decoration: none;
-    }
+  a:hover {
+    color: @text-meta-link-hover-color;
+    text-decoration: none;
+  }
 
 }
-
 
 // Size modifiers
 // ========================================================================
 
-.hook-text-small() {}
+.hook-text-small() {
+}
 
-.hook-text-large() {}
+.hook-text-large() {
+}
 
 .uk-text-medium {
-    font-size: @global-medium-font-size;
+  font-size: @global-medium-font-size;
 }
 
 .uk-text-little {
-    font-size: 14px;
-    line-height: 2;
+  font-size: 14px;
+  line-height: 2;
 }
 
 // Background modifier
 // ========================================================================
 
-.hook-text-background() {}
-
+.hook-text-background() {
+}
 
 // Miscellaneous
 // ========================================================================
 
-.hook-text-misc() {}
-
+.hook-text-misc() {
+}
 
 // Inverse
 // ========================================================================
 
-.hook-inverse-text-lead() {}
-.hook-inverse-text-meta() {}
+.hook-inverse-text-lead() {
+}
+
+.hook-inverse-text-meta() {
+}
 
 //New
 
@@ -96,5 +101,9 @@
  ========================================================================== */
 
 .uk-text-light {
-    font-weight: 300;
+  font-weight: 300;
+}
+
+.uk-text-untransformed {
+  text-transform: none;
 }
