--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -153,10 +153,17 @@ footer {
 
 
 /*Media*/
+
 @media (max-width: 959px) {
 
   .tm-pageheader {
     min-height: 0;
   }
+}
 
+@media (max-width: 639px) {
+
+  .uk-text-lead {
+    font-size: @global-large-font-size;
+  }
 }
