--- a/src/styles/theme/form.less
+++ b/src/styles/theme/form.less
@@ -243,7 +243,7 @@
   padding-right: 3px;
 }
 
-input[checked] + label {
+input:checked + label {
   background-color: darken(@global-orange, 10%);
   color: @global-inverse-color;
 }
