--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -22,6 +22,15 @@ footer {
   background-color: #dadada;
 }
 
+// form
+
+input:checked + label.uk-button-simple-orange {
+  background-color: darken(@global-orange, 10%);
+  color: @global-inverse-color;
+}
+
+// content
+
 .tm-companion-item {
 
   h4 {
@@ -148,9 +157,6 @@ footer {
     top: -20px;
   }
 }
-
-
-
 
 /*Media*/
 
