index search form fix

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -105,6 +105,11 @@ input:checked + label.uk-button-simple-orange {
   background-size: cover;
 }
 
+.tm-pageheader-visas {
+  background: url("../../images/visa_header_bg.jpg") no-repeat center;
+  background-size: cover;
+}
+
 
 .tm-navbar-active {
   background-color: @global-primary-background;
