visas html add and adaptive

--- a/src/styles/theme/card.less
+++ b/src/styles/theme/card.less
@@ -91,13 +91,17 @@
 
 .hook-card() {
     display: block;
-    min-height: 400px;
+    min-height: 224px;
     font-weight: 500;
     transition: box-shadow 0.1s ease-in-out;
 }
 
 .uk-card-small {
     min-height: 190px;
+}
+
+.uk-card-large {
+    min-height: 400px;
 }
 
 
