--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -2,6 +2,17 @@ a.uk-light:hover {
   color: @global-inverse-color;
 }
 
+.uk-light .uk-select:not([multiple]):not([size]),
+.uk-section-primary:not(.uk-preserve-color) .uk-select:not([multiple]):not([size]),
+.uk-section-secondary:not(.uk-preserve-color) .uk-select:not([multiple]):not([size]),
+.uk-tile-primary:not(.uk-preserve-color) .uk-select:not([multiple]):not([size]),
+.uk-tile-secondary:not(.uk-preserve-color) .uk-select:not([multiple]):not([size]),
+.uk-card-primary.uk-card-body .uk-select:not([multiple]):not([size]),
+.uk-card-primary > :not([class*='uk-card-media']) .uk-select:not([multiple]):not([size]),
+.uk-card-secondary.uk-card-body .uk-select:not([multiple]):not([size]),
+.uk-card-secondary > :not([class*='uk-card-media']) .uk-select:not([multiple]):not([size]),
+.uk-overlay-primary .uk-select:not([multiple]):not([size]),
+.uk-offcanvas-bar .uk-select:not([multiple]):not([size]),
 .uk-select:not([multiple]):not([size]) {
   background-image: none;
 }
