--- a/src/styles/theme/inverse.less
+++ b/src/styles/theme/inverse.less
@@ -15,9 +15,9 @@
 @inverse-global-inverse-color:                  @global-color;
 
 @inverse-global-primary-background:             @global-inverse-color;
-@inverse-global-muted-background:               fade(@global-inverse-color, 10%);
+@inverse-global-muted-background:               @global-inverse-color;;
 
-@inverse-global-border:                         fade(@global-inverse-color, 20%);
+@inverse-global-border:                         @global-inverse-color;;
 
 
 // Component
