--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -125,6 +125,11 @@ input:checked + label.uk-button-simple-orange {
   background-size: cover;
 }
 
+.tm-pageheader-companions {
+  background: url("../../images/companions_header_bg.jpg") no-repeat center;
+  background-size: cover;
+}
+
 
 .tm-navbar-active {
   background-color: @global-primary-background;
