--- a/src/styles/theme/form.less
+++ b/src/styles/theme/form.less
@@ -212,11 +212,12 @@
 
 @inverse-form-color:                           @global-emphasis-color;
 @inverse-form-focus-color:                     @global-emphasis-color;
+@inverse-form-placeholder-color:               @global-emphasis-color;
 
 @inverse-form-icon-color:                      @global-emphasis-color;
 @inverse-form-icon-hover-color:                @global-emphasis-color;
 
-@inverse-form-label-color:                     @inverse-global-emphasis-color;
+@inverse-form-label-color:                     @global-emphasis-color;
 
 .hook-inverse-form() {
   border-color: @inverse-global-border;
