--- a/src/styles/theme/text.less
+++ b/src/styles/theme/text.less
@@ -100,8 +100,8 @@
 /* Weight modifier
  ========================================================================== */
 
-.uk-text-light {
-  font-weight: 300;
+.uk-text-average {
+  font-weight: 500;
 }
 
 .uk-text-untransformed {
