--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -17,6 +17,11 @@ a.uk-light:hover {
   background-image: none;
 }
 
+.uk-list ul.uk-iconnav {
+  padding: 0;
+  margin-left: -10px;
+}
+
 .fa {
   line-height: inherit;
 }
