companions add listing html desktop

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -203,3 +203,11 @@ input:checked + label.uk-button-simple-orange {
     font-size: @global-large-font-size;
   }
 }
+
+.tm-checkbox-destination label {
+  display: block;
+
+  + label {
+    margin-top: 10px;
+  }
+}
