articles adaptive, fix dashed list

--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -66,6 +66,7 @@ input:checked + label.uk-button-simple-orange {
 }
 
 .tm-blog-title {
+  display: block;
   height: 52px;
   overflow: hidden;
   font-size: 20px;
@@ -160,6 +161,12 @@ input:checked + label.uk-button-simple-orange {
   display: none;
 }
 
+// nav
+
+.tm-nav-divider > li:nth-child(n+2) {
+      border-top: 1px dashed rgba(0, 0, 0, 0.5);
+}
+
 // social buttons
 .tm-social {
 
@@ -192,6 +199,11 @@ input:checked + label.uk-button-simple-orange {
     position: relative;
     top: -20px;
   }
+}
+
+.tm-article-title {
+  font-size: 20px;
+  font-weight: 700;
 }
 
 /*Media*/
