--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -206,6 +206,13 @@ input:checked + label.uk-button-simple-orange {
   font-weight: 700;
 }
 
+.tm-photo {
+  background-color: #e9eef3;
+}
+
+
+
+
 /*Media*/
 
 @media (max-width: 959px) {
