--- a/src/styles/theme/button.less
+++ b/src/styles/theme/button.less
@@ -10,8 +10,8 @@
 @button-small-line-height: @global-control-small-height - (@button-border-width * 2);
 @button-large-line-height: @global-control-large-height - (@button-border-width * 2);
 
-@button-font-size: @global-small-font-size;
-@button-small-font-size: @global-font-size;
+@button-font-size: @global-font-size;
+@button-small-font-size: @global-small-font-size;
 @button-large-font-size: @global-large-font-size;
 
 @button-padding-horizontal: @global-gutter;
@@ -64,8 +64,8 @@
 // New
 //
 
-@button-small-text-transform: none;
-@button-text-transform: uppercase;
+@button-small-text-transform: uppercase;
+@button-text-transform: none;
 @button-large-text-transform: none;
 
 @button-border-width: @global-border-width;
