--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -61,7 +61,7 @@ input:checked + label.uk-button-simple-orange {
 
   h4 {
     font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 400;
+    font-weight: 600;
   }
 }
 
@@ -167,6 +167,17 @@ input:checked + label.uk-button-simple-orange {
       border-top: 1px dashed rgba(0, 0, 0, 0.5);
 }
 
+// buttons
+.tm-button-text-small {
+  font-size: @global-small-font-size;
+  text-transform: uppercase;
+}
+
+.tm-button-text-default {
+  font-size: @global-font-size;
+  text-transform: none;
+}
+
 // social buttons
 .tm-social {
 
@@ -180,6 +191,11 @@ input:checked + label.uk-button-simple-orange {
     border-radius: 50%;
     box-sizing: border-box;
   }
+}
+
+// text
+.tm-line-height-big {
+  line-height: 2;
 }
 
 .tm-image-shadow {
@@ -209,7 +225,6 @@ input:checked + label.uk-button-simple-orange {
 .tm-photo {
   background-color: #e9eef3;
 }
-
 
 
 
