--- a/src/styles/theme/form.less
+++ b/src/styles/theme/form.less
@@ -185,6 +185,7 @@
 .hook-form-label() {
   color: @form-label-color;
   font-size: @form-label-font-size;
+  font-weight: 600;
   text-transform: uppercase;
 }
 
