--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -76,7 +76,7 @@
 //
 
 @global-border-width:                           1px;
-@global-border:                                 @global-muted-color;
+@global-border:                                 #e5e5e5;
 
 //
 // Box-Shadows
