--- a/src/styles/theme/variables.less
+++ b/src/styles/theme/variables.less
@@ -51,6 +51,7 @@
 
 @global-orange:                                 #ff983a;
 @global-blue:                                   #1884bc;
+@global-half-black:                             rgba(0, 0, 0, 0.5);
 
 @global-link-color:                             #396fa4;
 @global-link-hover-color:                       #2e547b;
