--- a/src/styles/theme/pagination.less
+++ b/src/styles/theme/pagination.less
@@ -18,17 +18,39 @@
 // Component
 // ========================================================================
 
-.hook-pagination() {}
+.hook-pagination() {
+  li {
+    padding: 0;
+    margin-left: @global-small-margin;
+  }
+
+  li:first-child {
+    margin-left: 0;
+  }
+
+  li:first-child, li:last-child {
+    a {
+      padding: 4px 12px 8px;
+    }
+  }
+}
 
 
 // Items
 // ========================================================================
 
-.hook-pagination-item() { transition: color 0.1s ease-in-out; }
+.hook-pagination-item() {
+  transition: color 0.1s ease-in-out;
+  padding: 6px 12px;
+  border: 1px solid @global-muted-color;
+  font-weight: 700;
+}
 
 .hook-pagination-item-hover() {}
 
-.hook-pagination-item-active() {}
+.hook-pagination-item-active() {
+  border-color: @global-orange;
+}
 
 .hook-pagination-item-disabled() {}
 
@@ -36,7 +58,9 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-pagination-misc() {}
+.hook-pagination-misc() {
+
+}
 
 
 // Inverse
