--- a/src/styles/theme/navbar.less
+++ b/src/styles/theme/navbar.less
@@ -106,7 +106,7 @@
 
 // Toggle
 // ========================================================================
-//TODO active toggler styles
+//#TODO active toggler styles
 .hook-navbar-toggle() {
 }
 
