--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -54,6 +54,11 @@ input:checked + label.uk-button-simple-orange {
   color: @global-inverse-color;
 }
 
+.tm-input-shadow {
+  border-color: #fff;
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.56), inset 0px 1px 2px 0 rgba(72, 114, 158, 0.61);
+}
+
 // content
 
 .tm-companion-item {
@@ -246,6 +251,7 @@ input:checked + label.uk-button-simple-orange {
   font-weight: 700;
 }
 
+// photo
 .tm-photo {
   background-color: #e9eef3;
 }
