--- a/src/styles/theme/base.less
+++ b/src/styles/theme/base.less
@@ -55,7 +55,7 @@
 @base-list-padding-left: 30px;
 
 @base-hr-margin-vertical: @global-margin;
-@base-hr-border-width: @global-border-width;
+@base-hr-border-width: 3px;
 @base-hr-border: @global-border;
 
 @base-blockquote-font-size: @global-medium-font-size;
