--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -54,6 +54,13 @@ input:checked + label.uk-button-simple-orange {
   color: @global-inverse-color;
 }
 
+form {
+
+  hr, .uk-hr {
+    border-top: 1px solid #d8d8d8;
+  }
+}
+
 .tm-input-shadow {
   border-color: #fff;
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.56), inset 0px 1px 2px 0 rgba(72, 114, 158, 0.61);
