label font size upd

--- a/src/styles/theme/form.less
+++ b/src/styles/theme/form.less
@@ -104,7 +104,7 @@
 @form-radio-disabled-border: @global-border;
 
 @form-label-color: @global-emphasis-color;
-@form-label-font-size: @global-small-font-size;
+@form-label-font-size: 14px;
 
 // Component
 // ========================================================================
@@ -185,7 +185,7 @@
 .hook-form-label() {
   color: @form-label-color;
   font-size: @form-label-font-size;
-  font-weight: 600;
+  font-weight: 700;
   text-transform: uppercase;
 }
 
