form-icon upd,  forms upd

--- a/src/styles/theme/form.less
+++ b/src/styles/theme/form.less
@@ -69,7 +69,7 @@
 
 @form-icon-width: @form-height;
 @form-icon-font-size: @global-font-size;
-@form-icon-color: @global-muted-color;
+@form-icon-color: #000;
 @form-icon-hover-color: @global-color;
 
 @internal-form-select-image: "../../images/backgrounds/form-select.svg";
