column label fix, radio upd

--- a/src/styles/theme/form.less
+++ b/src/styles/theme/form.less
@@ -95,7 +95,7 @@
 @form-blank-focus-border-style: dashed;
 
 @form-radio-border-width: @global-border-width;
-@form-radio-border: darken(@global-border, 10%);
+@form-radio-border: #707070;
 
 @form-radio-focus-border: @global-primary-background;
 
