--- a/src/styles/theme/custom.less
+++ b/src/styles/theme/custom.less
@@ -65,7 +65,45 @@ form {
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.56), inset 0px 1px 2px 0 rgba(72, 114, 158, 0.61);
 }
 
-// content
+.tm-registration label {
+  line-height: @global-control-small-height;
+}
+
+.tm-form-companions {
+
+  [class*='uk-column'] label {
+    margin-bottom: 10px;
+  }
+
+  .uk-form-label {
+    text-transform: none;
+  }
+}
+
+.tm-form-social {
+
+  .uk-form-icon {
+    border-right: 1px solid @global-border;
+  }
+}
+
+.tm-checkbox-set {
+
+  .tm-checkbox {
+    display: block;
+    line-height: @global-control-small-height;
+    text-align: center;
+    background-color: #fff;
+    border: 1px solid @global-border;
+  }
+
+  input:checked + .tm-checkbox {
+    color: @global-primary-background;
+    border-color: @global-primary-background;
+  }
+}
+
+  // content
 
 .tm-companion-item {
 
