--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,8 +1,19 @@
 //Import fonts
 /*
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Roboto+Condensed&subset=cyrillic');
+
+//@font-face {
+//    font-family: FontNameExample;
+//    src: url(../fonts/FontUrlExample.ttf);
+//}
 */
 
+
+// Fonts
+@import "fonts";
+
+// Font-awesome
+@import url('~font-awesome/css/font-awesome.css');
 
 // Import UIkit with only core styles)
 @import url('~uikit/src/less/uikit.less');
@@ -10,5 +21,3 @@
 // Theme
 @import "theme/_import.less";
 
-//awesome
-@import url('~font-awesome/css/font-awesome.css');
