white buttons serach icon size fix

--- a/src/styles/theme/button.less
+++ b/src/styles/theme/button.less
@@ -339,3 +339,12 @@
     color: @global-inverse-color;
   }
 }
+
+.uk-button-white {
+  box-shadow: 0 0 5px 0 rgba(43, 2, 2, 0.13);
+  background-color: #fff;
+
+  &:hover {
+    background-color: darken(#fff, 10%);
+  }
+}
